# First-Game-In-OpenGL.

./: .gitignore  CMakeLists.txt  main.c
.cache/clangd/index/: gl.c.679EBCA5A81C3D09.idx  gl.h.3F37AD41C0DB3EF3.idx  khrplatform.h.BFBC9FAD1102F8CD.idx  load.c.3EAF2CACCA90ECC3.idx  load.h.380D73758E08DDAE.idx  main.c.5421431D27270188.idx  utils.c.1748EBF76E339E1F.idx  utils.h.CB1578A740B56CCD.idx
shaders/: fragment_shader_program.frag  raymarcher.frag  raymarcher.vert  vertex_shader_program.vert
src/: load.c  utils.c
src/include/: load.h  utils.h
